# data-quality-toolkit

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPO_INVENTORY.md  SECURITY.md  constraints.txt  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  phase_implementation.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: README.md  baseline.py  baseline_results.json  kpi_bench.py  storage_bench.py
config/: README.md  kpi_catalog.yaml  v2_rules.yaml
docker/: Dockerfile  Dockerfile.cli  README.md  compose.override.yaml  compose.yaml
docs/: STATUS.md  api.md  architecture.md  capability_matrix.md  cli.md  demo_story.md  product.md  uiux_redesign_plan.md
docs/adr/: 0001-system-fitness-and-redesign-decision.md
docs/phase0/: PHASE_0_CHECKLIST.md  PHASE_0_FILE_MANIFEST.md
docs/powerbi/: date_table.md  incremental_refresh.md  rls_testing.md
examples/: 01_quickstart.ipynb  README.md  demo.csv
examples/dashboard/: README.md
examples/demo/: README.md  sample_orders.csv
examples/demo/issue_showcase/: README.md  issue_demo.csv
examples/pipeline_gate/: README.md  run_gate.sh  sample_pipeline_output.csv
scripts/: README.md  dashboard.py  export_star_schema.py  validate_kpis.py
scripts/commands/: tests.txt
scripts/powershell/: Initialize-Phase0.ps1  Initialize-Phase1.ps1  Initialize-Phase2.ps1  Initialize-Phase3.ps1  release-workflow.ps1  verify-phase2.ps1
src/data_quality_toolkit/: __init__.py  api.py
src/data_quality_toolkit/application/: ports.py
src/data_quality_toolkit/assessment/: issue_detector.py  quality_checker.py
src/data_quality_toolkit/cli/: main.py
src/data_quality_toolkit/exporters/: bi_star_schema.py  issue_export.py
src/data_quality_toolkit/lineage/: __init__.py
src/data_quality_toolkit/loaders/: data_loader_registry.py  loader_factory.py
src/data_quality_toolkit/profiling/: profile_result.py  profiling_orchestrator.py
src/data_quality_toolkit/semantics/: __init__.py  catalog_loader.py  dax_emitter.py  graph_export.py  normalizer.py  validators.py
src/data_quality_toolkit/shared/: compat.py  config.py  constants.py  error_contract.py  exceptions.py  models.py  path_guard.py  result_types.py  settings.py
src/data_quality_toolkit/storage/: importer.py  jsonl.py  reader.py  schema.py  writer.py
src/data_quality_toolkit/ui/: app.py  eda.py
src/data_quality_toolkit/utils/: __init__.py  helpers.py  logging.py  validators.py
src/data_quality_toolkit/workflow/: __init__.py  compare.py  executor.py  pipeline.py  preprocessing.py  workflow_builder.py
tests/: conftest.py
tests/fixtures/: factories.py  small_sample.csv
tests/golden/: quality_measures_expected.dax
tests/integration/: test_api_e2e.py  test_api_parity.py  test_build_pbi_negative.py  test_build_pbi_smoke.py  test_cli_error_alignment.py  test_cli_integration.py  test_drift_monitoring_parity.py  test_drift_plots_e2e.py  test_drift_xlsx_e2e.py  test_duckdb_export_e2e.py  test_elt_pipeline.py  test_pipeline_e2e.py  test_plan_parity.py  test_seam_parity.py  test_ui_core_parity.py  test_ui_manifest_viewer.py  test_ui_pages_smoke.py
tests/unit/api/: test_api_chunked_assess.py  test_api_chunked_profile.py  test_api_public_exports.py  test_api_result_types.py  test_api_sample_size.py  test_drift_api.py  test_drift_columns_api.py  test_drift_dashboard_api.py  test_drift_distributions_api.py  test_drift_history_reader.py  test_drift_history_report_api.py  test_drift_importer_api.py  test_drift_notifications_api.py  test_drift_plots_api.py  test_drift_queries_api.py  test_drift_row_result_types.py  test_drift_thresholds_api.py  test_drift_trends_api.py  test_drift_xlsx_api.py  test_duckdb_export_api.py  test_export_csv_manifest.py  test_flat_wrapper_result_types.py  test_kpi_api.py  test_nested_envelope_result_types.py  test_powerbi_api.py  test_public_api.py  test_readme_smoke.py  test_version_export.py
tests/unit/application/: test_kpi_workflow.py  test_pipeline_ports.py
tests/unit/assessment/: test_advanced_issues.py  test_all_null_columns.py  test_assess_schema_issues.py  test_blank_column_names.py  test_chunked_assessment.py  test_compute_score_edge_cases.py  test_constant_columns.py  test_detect_issues_threshold_behavior.py  test_duplicate_columns.py  test_issue_detector.py  test_issue_shape_contract.py  test_padded_column_names.py  test_per_column_rules.py  test_placeholder_column_names.py  test_quality_checker.py  test_quality_score_components.py  test_v2_rule_enforcement.py  test_weighted_scoring.py
tests/unit/cli/: test_blank_path_validation.py  test_cli_assess_summary.py  test_cli_charts.py  test_cli_chunked_assess.py  test_cli_chunked_profile.py  test_cli_compare_summary.py  test_cli_config.py  test_cli_dashboard.py  test_cli_drift.py  test_cli_drift_history.py  test_cli_drift_history_columns.py  test_cli_drift_history_dashboard.py  test_cli_drift_history_export_duckdb.py  test_cli_drift_history_export_xlsx.py  test_cli_drift_history_import.py  test_cli_drift_history_list.py  test_cli_drift_history_notify.py  test_cli_drift_history_plot.py  test_cli_drift_history_report.py  test_cli_drift_history_trend.py  test_cli_errors.py  test_cli_export_star_manifest.py  test_cli_fail_under.py  test_cli_help_smoke.py  test_cli_json_errors_flag.py  test_cli_kpi_coupling.py  test_cli_main.py  test_cli_no_json_flag.py  test_cli_null_threshold.py  test_cli_pipeline_run.py  test_cli_plan.py  test_cli_profile_summary.py  test_cli_quiet_flag.py  test_cli_score_field.py  test_cli_structure.py  test_cli_ui.py  test_csv_extension_validation.py  test_file_not_found_message.py  test_loader_value_error_message.py  test_missing_csv_arg_message.py  (+1 more)
tests/unit/explanation/: test_ai_narrator.py  test_narrator.py
tests/unit/exporters/: test_bi_star_schema.py  test_csv_exporter.py  test_drift_plots_exporter.py  test_drift_xlsx_exporter.py  test_duckdb_exporter.py  (+2 more)
(+243 files in other folders)
