[build-system]
requires = ["setuptools>=71.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-toolkit"
version = "2.0.0"
description = "CSV-first data quality toolkit for BI and reporting workflows: profile, assess, export, and compare run-to-run quality trends."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Data Team" }]
keywords = ["data-quality", "power-bi", "data-profiling", "data-pipeline", "business-intelligence"]

# Core dependencies for Phase 1 & 2
dependencies = [
    # Data Processing
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",

    # Configuration & Models
    "pydantic>=2.6,<2.10",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.2.2",

    # CLI & UI
    "rich>=13.0.0",

    # Templates
    "jinja2>=3.1.0",

    # Utilities
    "pyyaml>=6.0",
    "jsonschema>=4.17.0",
    "typing-extensions>=4.7.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=26.3.1",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
    "pip-audit>=2.7.0",  # Dependency CVE scanning
    "ipykernel>=6.25.0",  # For notebooks
]

viz = [
    "graphviz>=0.20",  # For rendering graphs
    "matplotlib>=3.7.0",  # For plotting (future)
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "autodoc-pydantic>=2.0.0",
]

powerbi = [
    "openpyxl>=3.1.0",  # For Excel export (future)
    "xlsxwriter>=3.1.0",  # For Excel formatting (future)
]

ui = [
    "streamlit>=1.30",  # Phase 4 dashboard (pip install data-quality-toolkit[ui])
]

[project.urls]
Homepage = "https://github.com/asamili/data-quality-toolkit"
Repository = "https://github.com/asamili/data-quality-toolkit"
"Bug Tracker" = "https://github.com/asamili/data-quality-toolkit/issues"
Changelog = "https://github.com/asamili/data-quality-toolkit/blob/main/CHANGELOG.md"

# CLI entrypoint
[project.scripts]
dqt = "data_quality_toolkit.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]
include = ["data_quality_toolkit*"]

[tool.setuptools.package-data]
data_quality_toolkit = [
    "*.yaml",
    "*.json",
    "templates/*",
    "templates/**/*",
    "exporters/bi/templates/*",
    "static/*",
    "py.typed"
]

# ===== Tool Configurations =====

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["examples/**/*.ipynb", "dist/", "build/"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "W", "C90", "S"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "B905",   # zip() without explicit strict=
    "B018",   # Found useless expression
    "N805",   # First argument of method should be self
    "S101",   # Use of assert detected
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018", "S101"]  # Allow asserts and expressions in tests
"src/data_quality_toolkit/cli/main.py" = ["B018"]
"scripts/*" = ["S101"]  # Allow asserts in scripts

# mccabe: give the already-selected C90 rule an enforced ceiling
[tool.ruff.lint.mccabe]
max-complexity = 10

# Black formatter
[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.mypy_cache
)/
'''

# isort
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["data_quality_toolkit"]

# MyPy
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "pandas.*",
    "numpy.*",
    "jinja2.*",
    "yaml.*",
    "openpyxl.*"
]
ignore_missing_imports = true


# Coverage
[tool.coverage.run]
source = ["src/data_quality_toolkit"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/templates/*",
    "*/static/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
